--- a/other_tasks.ipynb
+++ b/other_tasks.ipynb
@@ -44,7 +44,9 @@
     }
    ],
    "source": [
-    "dir=r\"patterns\"\n",
+    "# training dlib model\n",
+    "# \n",
+    "dir=r\"patterns\" # image data set (15 pieces) needs more, but laziness\n",
     "images=[]\n",
     "annots=[]\n",
     "\n",
