--- a/other_tasks.ipynb
+++ b/other_tasks.ipynb
@@ -45,7 +45,7 @@
    ],
    "source": [
     "# training dlib model\n",
-    "# \n",
+    "# to create a dataset use \"labelImg\" application\n",
     "dir=r\"patterns\" # image data set (15 pieces) needs more, but laziness\n",
     "images=[]\n",
     "annots=[]\n",
