--- a/other_tasks.ipynb
+++ b/other_tasks.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "69978d97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "import cv2 as cv\n",
     "import dlib\n",
     "import os\n",
     "import xml.etree.ElementTree as pars"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "2357dc40",
    "metadata": {},
    "outputs": [
@@ -123,122 +123,41 @@
       "Правая половина\n",
       "Правая половина\n",
       "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
-      "Правая половина\n",
       "Правая половина\n"
      ]
     }
    ],
    "source": [
-    "model_detector = dlib.simple_object_detector(\"tld.swm\")\n",
-    "font = cv2.FONT_HERSHEY_COMPLEX\n",
-    "cap = cv2.VideoCapture(0)\n",
-    "\n",
+    "model_detector = dlib.simple_object_detector(\"tld.swm\")  # use dlib model\n",
+    "font = cv.FONT_HERSHEY_COMPLEX\n",
+    "cap = cv.VideoCapture(0)\n",
+    "img = cv.imread('fly64.png')\n",
+    "img = cv.resize(img, (20, 20))\n",
+    "img_height, img_width, _ = img.shape  # size of img\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "\n",
     "    boxes = model_detector(frame)\n",
     "    for box in boxes:\n",
     "        (x, y, xb, yb) = [box.left(), box.top(), box.right(), box.bottom()]\n",
-    "        cv2.rectangle(frame, (x, y), (xb, yb), (0, 0, 225), 2)\n",
-    "        string = str(int(x+((xb-x)/2))) + \" \" + str(int(y+((yb-y)/2)))\n",
-    "        center = ((int(x+((xb-x)/2))), int(y+((yb-y)/2)))\n",
-    "        cv2.putText(frame, string, center, font, 0.5, (255, 0, 0))\n",
-    "        cv2.circle(frame, center, 5, (255, 0, 0), 2)\n",
-    "        if center[0] > 350:\n",
+    "        cv.rectangle(frame, (x, y), (xb, yb), (0, 0, 225), 2)  # drawing contour\n",
+    "        center = ((int(x + ((xb - x) / 2))), int(y + ((yb - y) / 2)))  # cords of center\n",
+    "        x_center = center[0]\n",
+    "        y_center = center[1]\n",
+    "        string = str(x_center) + \" \" + str(y_center)\n",
+    "        cv.putText(frame, string, center, font, 0.5, (255, 0, 0))\n",
+    "        cv.circle(frame, center, 5, (255, 0, 0), 2)\n",
+    "        frame[y_center:y_center + img_height, x_center:x_center + img_width] = img  # add img to center of frame\n",
+    "        if x_center > 350:  # condition for right side frame\n",
     "            print('Правая половина')\n",
-    "    cv2.imshow(\"frame\", frame)\n",
+    "    cv.imshow(\"frame\", frame)  # show frame with contour and cord of center\n",
     "\n",
-    "    if cv2.waitKey(1) == ord(\"q\"):\n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "\n",
     "        break\n",
     "\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv.destroyAllWindows()"
    ]
   },
   {
