--- a/other_tasks.ipynb
+++ b/other_tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "69978d97",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "684c1fd1",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1.jpg', '10.jpg', '11.jpg', '12.jpg', '13.jpg', '14.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', 'pattern.jpg']\n",
+      "['1.jpg', '10.jpg', '11.jpg', '12.jpg', '13.jpg', '14.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', 'pattern.jpg', 'WIN_20230301_16_03_15_Pro.mp4', 'WIN_20230301_16_03_20_Pro.jpg', 'WIN_20230301_16_03_21_Pro.jpg', 'WIN_20230301_16_03_24_Pro.jpg', 'WIN_20230301_16_03_27_Pro.jpg', 'WIN_20230301_16_03_29_Pro.jpg', 'WIN_20230301_16_03_33_Pro.jpg', 'WIN_20230301_16_03_38_Pro.jpg', 'WIN_20230301_16_03_40_Pro.jpg', 'WIN_20230301_16_03_44_Pro.jpg', 'WIN_20230301_16_03_45_Pro.jpg', 'WIN_20230301_16_03_48_Pro.jpg', 'WIN_20230301_16_03_50_Pro.jpg', 'WIN_20230301_16_03_52_Pro.jpg', 'WIN_20230301_16_03_55_Pro.jpg', 'WIN_20230301_16_03_56_Pro.jpg', 'WIN_20230301_16_03_57_Pro.jpg', 'WIN_20230301_16_03_58_Pro.jpg']\n",
       "1\n",
       "10\n",
       "11\n",
@@ -38,8 +38,18 @@
       "7\n",
       "8\n",
       "9\n",
-      "pattern\n",
-      "Detector saved\n"
+      "pattern\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.5.5) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m FileName \u001b[38;5;129;01min\u001b[39;00m imgNameList:\n\u001b[0;32m     12\u001b[0m     image \u001b[38;5;241m=\u001b[39m cv\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;28mdir\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/images/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m FileName)\n\u001b[1;32m---> 13\u001b[0m     image\u001b[38;5;241m=\u001b[39m\u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2RGB\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m     OnlyFileName \u001b[38;5;241m=\u001b[39m FileName\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]  \n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(OnlyFileName)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.5.5) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n"
      ]
     }
    ],
@@ -55,8 +65,8 @@
     "print(imgNameList)\n",
     "\n",
     "for FileName in imgNameList:\n",
-    "    image = cv2.imread(dir + \"/images/\" + FileName)\n",
-    "    image=cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    image = cv.imread(dir + \"/images/\" + FileName)\n",
+    "    image=cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
     "    \n",
     "    OnlyFileName = FileName.split(\".\")[0]  \n",
     "    print(OnlyFileName)\n",
